--- a/index.html
+++ b/index.html
@@ -1487,12 +1487,12 @@
                 <a href="#"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-medium"></i></a>
             </div>
-            <p>海豚动态经济模型 | 专业经济模型门户</p>
+            <p>海豚动态经济模型 | OKX模型策略验证</p>
             <p class="mt-xs" style="color: var(--gray); font-size: 0.6875rem;">
                 本模拟器基于公开数据和合理假设构建，不构成投资建议。实际收益受市场条件影响。DeFi投资有风险，请谨慎参与。
             </p>
             <p class="mt-xs" style="color: var(--gray); font-size: 0.6875rem;">
-                © 2023 海豚动态经济模型. 保留所有权利。
+                © 2026 海豚动态经济模型. 保留所有权利。
             </p>
         </footer>
     </div>
@@ -2197,3 +2197,4 @@
     </script>
 </body>
 </html>
+
